--- a/.vercel/output/static/src/Login.html
+++ b/.vercel/output/static/src/Login.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="output.css">
     <link rel="stylesheet" href="SignUp.css">
 <body>
-
+   	<div class="area">
+			<ul class="circles bg-stone-500">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			
     <div class="container">
-        <h2>Login</h2>
+        <h2 style="color: white;">Login</h2>
         <form id="login" method="POST">
             
             <div class="form-group">
@@ -28,6 +41,8 @@
             <p> Create an account <a href="./SignUpPage.html">Sign Up</a></p>
         </div>
     </div>
+    </ul>
+		</div>
     <script type="module" defer src="./login.js"></script>
 </body>
 </html>
