--- a/FrontEnd/src/About.html
+++ b/FrontEnd/src/About.html
@@ -20,8 +20,10 @@
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background: #fff;
+            color:white;
             border-radius: 8px;
+            background-color: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         h1 {
@@ -39,13 +41,15 @@
             border-left: 4px solid #0078D4;
             display: flex;
             align-items: center;
+              background-color: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
             gap: 20px;
         }
         .creator-info img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            border: 2px solid #0078D4;
+            border: 2px solid white;
         }
         .social-links {
             margin-top: 15px;
@@ -71,6 +75,7 @@
     
     color: white;
 }
+
 
     </style>
   
