--- a/FrontEnd/src/Login.html
+++ b/FrontEnd/src/Login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="SignUp.css">
 <body>
    	<div class="area">
-			<ul class="circles bg-stone-500">
+			<ul class="circles">
 				<li></li>
 				<li></li>
 				<li></li>
