--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -88,7 +88,7 @@
         <!-- Profile dropdown -->
         <div class="relative ml-3" id="profile-dropdown">
           <div>
-            <button type="button" id="profile-pic" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" aria-expanded="false" aria-haspopup="true">
+            <button type="button" id="profile-pic"  aria-expanded="false" aria-haspopup="true">
               <span class="absolute -inset-1.5"></span>
               <span class="sr-only">Open user menu</span>
               <img class="size-8 rounded-full" id="image" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
