--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
-          <img class="h-8 w-auto" src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company">
+          <img class="h-8 w-auto" src="https://res.cloudinary.com/dsloz7tfz/image/upload/v1749407802/ChatGPT_Image_Jun_9_2025_12_04_03_AM_axvjwc.png" alt="Your Company">
         </div>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
