--- a/FrontEnd/src/EventDetails.html
+++ b/FrontEnd/src/EventDetails.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event</title>
+    <link rel="icon" type="" href="https://res.cloudinary.com/dsloz7tfz/image/upload/v1749482895/ChatGPT_Image_Jun_9_2025_08_48_30_PM_omtdgs.png">
+
      <link rel="stylesheet" href="output.css">
       <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <style>
@@ -309,7 +311,7 @@
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
-          <img class="h-8 w-auto" src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company">
+          <img class="h-8 w-auto" src="https://res.cloudinary.com/dsloz7tfz/image/upload/v1749482895/ChatGPT_Image_Jun_9_2025_08_48_30_PM_omtdgs.png" alt="Your Company">
         </div>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
