--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+      <link rel="icon" type="" href="https://res.cloudinary.com/dsloz7tfz/image/upload/v1749482895/ChatGPT_Image_Jun_9_2025_08_48_30_PM_omtdgs.png">
     <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="output.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
@@ -53,7 +54,7 @@
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
-          <img class="h-8 w-auto" src="https://res.cloudinary.com/dsloz7tfz/image/upload/v1749407802/ChatGPT_Image_Jun_9_2025_12_04_03_AM_axvjwc.png" alt="Your Company">
+          <img class="h-8 w-auto" src="https://res.cloudinary.com/dsloz7tfz/image/upload/v1749482895/ChatGPT_Image_Jun_9_2025_08_48_30_PM_omtdgs.png" alt="Your Company">
         </div>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
