--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -205,7 +205,7 @@
 
   <div class="sm:hidden relative">
     <input
-    id="search-bar"
+    id="search-bar2"
       type="text"
       placeholder="Search..."
       class="glass bg-white/10 border border-white/20 text-white placeholder-white px-4 py-2 rounded-full w-40 focus:w-64 transition-width duration-500 ease-in-out focus:outline-none focus:ring-2 focus:ring-white/30"
