--- a/FrontEnd/src/profile.html
+++ b/FrontEnd/src/profile.html
@@ -534,17 +534,19 @@ background-image: url('https://m.media-amazon.com/images/I/81NE5bSsUML._AC_UF894
     </div>
    <div class="text-sm leading-6" id="newReviews">
     <figure class="relative flex flex-col-reverse bg-slate-100 rounded-lg p-6 dark:bg-slate-800 dark:highlight-white/5">
-        <blockquote class="mt-6 text-slate-700 dark:text-slate-300">
-            <p>I may not show it but i cant live without {product}.</p>
-        </blockquote>
+        
+            <h2 id="review_description" class="mt-6 text-slate-700 dark:text-slate-300">I may not show it but i cant live without {product}.</h2>
+       
         <figcaption class="flex items-center space-x-4">
             <img id='reviewerImage' src="https://images.unsplash.com/photo-1632910121591-29e2484c0259?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw4fHxjb2RlcnxlbnwwfDB8fHwxNzEwMTY0NjIzfDA&ixlib=rb-4.0.3&q=80&w=1080" alt="" class="flex-none w-14 h-14 rounded-full object-cover" loading="lazy" decoding="async">
             <div class="flex-auto">
                 <div class="text-base text-slate-900 font-semibold dark:text-slate-200" id="reviewer-name">
                     John Doe
                 </div>
-                <div class="mt-0.5 dark:text-slate-300">
-                    Web Developer
+                <div class="mt-0.5 dark:text-slate-300" id="stars_container">
+                  <svg data-star="1" class="w-6 h-6 ms-1 text-yellow-300 cursor-pointer" id="stars" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+    <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+  </svg>
                 </div>
             </div>
         </figcaption>
